(lang dune 2.8)
(name wayland)
(formatting disabled)
(generate_opam_files true)
(source (github talex5/ocaml-wayland))
(authors "talex5@gmail.com")
(maintainers "talex5@gmail.com")
(documentation "https://talex5.github.io/ocaml-wayland/")
(package
 (name wayland)
 (synopsis "Pure OCaml Wayland protocol library")
 (depends
  (alcotest-lwt (and (>= 1.2.3) :with-test))
  (ocaml (>= 4.08.0))
  (xmlm (>= 1.3.0))
  (lwt (>= 5.4.0))
  (logs (>= 0.7.0))
  (fmt (>= 0.8.9))
  (cstruct (>= 6.0.0))
  (cmdliner (>= 1.0.4))))
