(library
  (name wayland_protocols)
  (public_name wayland.protocols)
  (libraries wayland))

(rule
 (targets xdg_shell_client.ml xdg_shell_server.ml xdg_shell_proto.ml)
 (deps   xdg-shell.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets gtk_primary_selection_client.ml gtk_primary_selection_server.ml gtk_primary_selection_proto.ml)
 (deps   gtk-primary-selection.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets wp_primary_selection_unstable_v1_client.ml wp_primary_selection_unstable_v1_server.ml wp_primary_selection_unstable_v1_proto.ml)
 (deps   primary-selection-unstable-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets xdg_output_unstable_v1_client.ml xdg_output_unstable_v1_server.ml xdg_output_unstable_v1_proto.ml)
 (deps   xdg-output-unstable-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets xdg_decoration_unstable_v1_client.ml xdg_decoration_unstable_v1_server.ml xdg_decoration_unstable_v1_proto.ml)
 (deps   xdg-decoration-unstable-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto,Xdg_shell_proto %{deps})))

(rule
  (targets relative_pointer_unstable_v1_client.ml
           relative_pointer_unstable_v1_server.ml
           relative_pointer_unstable_v1_proto.ml)
  (deps relative-pointer-unstable-v1.xml)
  (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))


(rule
  (targets pointer_constraints_unstable_v1_client.ml
           pointer_constraints_unstable_v1_server.ml
           pointer_constraints_unstable_v1_proto.ml)
  (deps pointer-constraints-unstable-v1.xml)
  (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
  (targets viewporter_client.ml
           viewporter_server.ml
           viewporter_proto.ml)
  (deps viewporter.xml)
  (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets server_decoration_client.ml
          server_decoration_server.ml
          server_decoration_proto.ml)
 (deps   server-decoration.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets wlr_screencopy_unstable_v1_client.ml
          wlr_screencopy_unstable_v1_server.ml
          wlr_screencopy_unstable_v1_proto.ml)
 (deps   wlr-screencopy-unstable-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets wlr_layer_shell_unstable_v1_client.ml
          wlr_layer_shell_unstable_v1_server.ml
          wlr_layer_shell_unstable_v1_proto.ml)
 (deps wlr-layer-shell-unstable-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto,Xdg_shell_proto %{deps})))

(rule
 (targets drm_client.ml
          drm_server.ml
          drm_proto.ml)
 (deps   wayland-drm.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets linux_dmabuf_unstable_v1_client.ml
          linux_dmabuf_unstable_v1_server.ml
          linux_dmabuf_unstable_v1_proto.ml)
 (deps   linux-dmabuf-unstable-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets tablet_v2_client.ml
          tablet_v2_server.ml
          tablet_v2_proto.ml)
 (deps   tablet-v2.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto %{deps})))

(rule
 (targets cursor_shape_v1_client.ml
          cursor_shape_v1_server.ml
          cursor_shape_v1_proto.ml)
 (deps   cursor-shape-v1.xml)
 (action (run %{bin:wayland-scanner-ocaml} --open Wayland.Wayland_proto,Tablet_v2_proto %{deps})))
